test/asm/def.err
error: 'constant' already defined
    at def.asm(23)
    and also:
    at def.asm(10)
error: 'mac' already defined as non-EQU
    at def.asm(35)
    and also:
    at def.asm(32)
error: 'name' already defined (should it be {interpolated} to define its contents "constant2"?)
    at def.asm(38)
    and also:
    at def.asm(37)
error: 'name' already defined (should it be {interpolated} to define its contents "mac2"?)
    at def.asm(42)
    and also:
    at def.asm(40)
Assembly aborted with 4 errors!
